--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,24 @@ hr {
     margin: 5px 0;
 }
 
+/*-------------------------------------------------------------------  common classes */
+
+.heding1,
+.heding2,
+.heding3 {
+    font-family: 'Quicksand', sans-serif;
+    color: #331D2C;
+}
+
+.heading-transform {
+    text-transform: uppercase;
+    letter-spacing: 6px;
+    text-align: center;
+    font-size: xx-large;
+    padding-bottom: 20px;
+}
+
+
 /*-------------------------------------------------------------------  head section */
 
 .logo {
@@ -73,7 +91,6 @@ hr {
 
 .home-image {
     position: relative;
-    /* width: 700px; */
     margin-left: auto;
     margin-right: auto;
     width: 100%;
@@ -98,8 +115,6 @@ hr {
     color: white;
     font-family: 'Patrick Hand',
         'Courier New';
-    /* margin-left: auto;
-    margin-right: auto; */
 
     display: flex;
     flex-direction: column;
@@ -116,26 +131,7 @@ hr {
 /*-------------------------------------------------------------------  section experience */
 .experience-section {
     padding: 5rem 0;
-    /* margin-bottom: 40px; */
     background: url('../images/bokeh-2072271_1920.webp') center center / cover no-repeat fixed;
-    /* margin-top: 60px; */
-    /* margin-bottom: 80px; */
-}
-
-.experience-section h1,
-h2,
-h3 {
-    font-family: 'Quicksand', sans-serif;
-    color: #331D2C;
-}
-
-.experience-section h1 {
-    text-transform: uppercase;
-    letter-spacing: 6px;
-    text-align: center;
-    font-size: xx-large;
-    padding-bottom: 20px;
-
 }
 
 .inside {
@@ -181,29 +177,11 @@ section {
 /*-------------------------------------------------------------------  education section */
 .education-section {
     padding: 5rem 0;
-    /* margin-bottom: 80px; */
     display: grid;
     place-items: center;
 }
 
-.education-section h1,
-h2,
-h3 {
-    font-family: 'Quicksand', sans-serif;
-    color: #331D2C;
-}
-
-.education-section h1 {
-    text-transform: uppercase;
-    letter-spacing: 6px;
-    text-align: center;
-    font-size: xx-large;
-    padding-top: 10px;
-    padding-bottom: 30px;
-}
-
 .education-box {
-    /* width: 600px; */
     border: 3px solid #331D2C;
     box-shadow: 9px 6px 4px #A78295;
     padding: 10px;
@@ -237,24 +215,7 @@ ul strong {
 /*-------------------------------------------------------------------  skills section */
 .skills-section {
     padding: 5rem 0;
-    /* margin-bottom: 80px; */
     background: url('../images/bokeh-2072271_1920.webp') center center / cover no-repeat fixed;
-}
-
-.skills-section h1,
-h2,
-h3 {
-    font-family: 'Quicksand', sans-serif;
-    color: #331D2C;
-}
-
-.skills-section h1 {
-    text-transform: uppercase;
-    letter-spacing: 6px;
-    text-align: center;
-    font-size: xx-large;
-    /* padding-top: 30px;
-    padding-bottom: 20px; */
 }
 
 .skills-section h2 {
@@ -392,32 +353,14 @@ div .skill-box {
 
 
 /*-------------------------------------------------------------------  contact me section */
-.contact-section h1,
-h2,
-h3 {
-    font-family: 'Quicksand', sans-serif;
-    color: #331D2C;
-}
-
 .contact-section {
     padding: 5rem 0;
-    /* margin-bottom: 80px; */
-
     clear: left;
     background-color: #AC8499;
     background-size: cover;
     background-position: center;
     height: auto;
     width: 100%;
-}
-
-.contact-section h1 {
-    text-transform: uppercase;
-    letter-spacing: 6px;
-    text-align: center;
-    font-size: xx-large;
-    /* padding-top: 30px; */
-    padding-bottom: 20px;
 }
 
 .contact-me {
@@ -445,8 +388,6 @@ h3 {
     color: #EDC9D2;
     background-color: #331D2C;
     opacity: .5;
-    /* width: 90%; */
-    /* padding: 14px; */
 }
 
 
